// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduceEventsByPlayer DamageEvents sourceID === damageDone by player 1`] = `Array []`;

exports[`reduceEventsByPlayer DamageEvents targetID === damageTaken by player 1`] = `
Array [
  Object {
    "abilityGameID": 328501,
    "amount": 1083570,
    "hitType": 1,
    "pin": "0",
    "sourceID": 165,
    "sourceInstance": 4,
    "targetID": 160,
    "targetInstance": 2,
    "timestamp": 9074155,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 2543462,
    "hitType": 1,
    "pin": "0",
    "sourceID": 165,
    "sourceInstance": 4,
    "targetID": 166,
    "targetInstance": 4,
    "timestamp": 9074155,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 372673,
    "hitType": 1,
    "pin": "0",
    "sourceID": 165,
    "sourceInstance": 3,
    "targetID": 170,
    "timestamp": 9124385,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 1316801,
    "hitType": 1,
    "pin": "0",
    "sourceID": 165,
    "sourceInstance": 3,
    "targetID": 164,
    "targetInstance": 4,
    "timestamp": 9124385,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 604212,
    "hitType": 1,
    "pin": "0",
    "sourceID": 165,
    "sourceInstance": 2,
    "targetID": 162,
    "targetInstance": 1,
    "timestamp": 9391204,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 596800,
    "hitType": 1,
    "pin": "0",
    "sourceID": 165,
    "sourceInstance": 2,
    "targetID": 161,
    "targetInstance": 5,
    "timestamp": 9391204,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 581618,
    "hitType": 1,
    "pin": "0",
    "sourceID": 179,
    "sourceInstance": 5,
    "targetID": 178,
    "targetInstance": 1,
    "timestamp": 9567107,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": -169348,
    "hitType": 1,
    "overkill": 65014,
    "pin": "0",
    "sourceID": 179,
    "sourceInstance": 10,
    "targetID": 167,
    "targetInstance": 4,
    "timestamp": 9616138,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 447209,
    "hitType": 1,
    "pin": "0",
    "sourceID": 179,
    "sourceInstance": 13,
    "targetID": 45,
    "targetInstance": 2,
    "timestamp": 9666021,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 327955,
    "hitType": 1,
    "pin": "0",
    "sourceID": 179,
    "sourceInstance": 21,
    "targetID": 163,
    "targetInstance": 2,
    "timestamp": 9766040,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
  Object {
    "abilityGameID": 328501,
    "amount": 141320,
    "hitType": 1,
    "pin": "0",
    "sourceID": 179,
    "sourceInstance": 29,
    "targetID": 180,
    "timestamp": 9866045,
    "type": "damage",
    "unmitigatedAmount": 70987,
  },
]
`;

exports[`reduceEventsByPlayer HealEvents sourceID === healingDone by source 1`] = `
Array [
  Object {
    "abilityGameID": 344422,
    "amount": 54149,
    "hitType": 1,
    "overheal": 95456,
    "pin": "0",
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 1,
    "targetMarker": 2,
    "timestamp": 1913800,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 63747,
    "hitType": 2,
    "overheal": 131191,
    "pin": "0",
    "sourceID": 9,
    "targetID": 9,
    "timestamp": 1915001,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 47270,
    "hitType": 1,
    "overheal": 107811,
    "pin": "0",
    "sourceID": 4,
    "sourceMarker": 7,
    "targetID": 4,
    "targetMarker": 7,
    "timestamp": 1916507,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 5902,
    "hitType": 1,
    "overheal": 114954,
    "pin": "0",
    "sourceID": 8,
    "targetID": 8,
    "timestamp": 1923089,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 53236,
    "hitType": 1,
    "overheal": 89835,
    "pin": "0",
    "sourceID": 2,
    "targetID": 2,
    "timestamp": 1924449,
    "type": "heal",
  },
]
`;

exports[`reduceEventsByPlayer HealEvents targetID === healing received by target 1`] = `
Array [
  Object {
    "abilityGameID": 344422,
    "amount": 19160,
    "hitType": 1,
    "overheal": 134051,
    "pin": "0",
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 1,
    "targetMarker": 2,
    "timestamp": 1913800,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 26846,
    "hitType": 1,
    "overheal": 128784,
    "pin": "0",
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 9,
    "timestamp": 1913816,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 119029,
    "hitType": 1,
    "overheal": 63856,
    "pin": "0",
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 4,
    "targetMarker": 7,
    "timestamp": 1913816,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 31862,
    "hitType": 1,
    "overheal": 98400,
    "pin": "0",
    "sourceID": 9,
    "targetID": 2,
    "timestamp": 1915015,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 27407,
    "hitType": 1,
    "overheal": 114156,
    "pin": "0",
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 8,
    "timestamp": 1917790,
    "type": "heal",
  },
]
`;
